--- a/src/App.css
+++ b/src/App.css
@@ -70,10 +70,15 @@ z-index: 1;
   width:60px;
   height: 60px;
   padding: 0px;
-  background-color:#f9a755;
+  background-color:#f3cba6ec;
   border-radius: 10%;
   border: 1px solid rgba(0, 0, 0, 0.2);
   margin: 5px;
+  cursor: pointer;
+}
+
+.part:hover{
+  background-color: #f9a755;
 }
 
 .img{
@@ -86,8 +91,8 @@ z-index: 1;
 .avatar{
   position: fixed;
   top: 20%;
-  width: 320px;
-  height: 370px;
+  width: 500px;
+  height: 570px;
   margin-left: 50px;
   border-radius: 10%;
   border: 10px solid rgba(0, 0, 0, 0.2);
@@ -97,10 +102,37 @@ z-index: 1;
 .avatar_img{
   width: 80%;
   height: auto;
-  margin-top: 30px;
-  margin-left: 30px;
+  margin-top: 60px;
+  margin-left: 55px;
 }
 .allPartLists{
-  margin-left: 500px;
+  margin-left: 750px;
+
+}
+
+.app-container {
+  justify-content: center; 
+  align-items: center;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.list {
+  margin-bottom: 50px;
+  
+}
+
+.partList {
+  margin-top: -10px;
+  border-radius: 1em;
+  border: 5px solid rgb(241, 155, 27);
+  background-color: #ebd3b1bd;
+}
+
+.list-title{
+  text-align: center;
+  font-size: 170%;
+  font-family: 'Roboto', sans-serif;
+  text-transform: capitalize;
 
 }
