--- a/src/App.css
+++ b/src/App.css
@@ -91,8 +91,8 @@ z-index: 1;
 .avatar{
   position: fixed;
   top: 20%;
-  width: 500px;
-  height: 570px;
+  width: 450px;
+  height: 500px;
   margin-left: 50px;
   border-radius: 10%;
   border: 10px solid rgba(0, 0, 0, 0.2);
@@ -102,9 +102,18 @@ z-index: 1;
 .avatar_img{
   width: 80%;
   height: auto;
-  margin-top: 60px;
+  margin-top: 30px;
   margin-left: 55px;
 }
+.randomize {
+  width: 40%;
+  height: 8%;
+  border-radius: 5px;
+  font-size: larger;
+  margin-top: 435px;
+  margin-left: 140px;
+}
+
 .allPartLists{
   margin-left: 750px;
 
