--- a/src/App.css
+++ b/src/App.css
@@ -66,82 +66,122 @@ position: absolute;
 z-index: 1;
 }
 
-.part{
-  width:60px;
-  height: 60px;
-  padding: 0px;
-  background-color:#f3cba6ec;
-  border-radius: 10%;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  margin: 5px;
-  cursor: pointer;
+.app-container {
+  display: flex;
+  flex-direction: row;
+  gap: 100px; /* Space between avatar and allPartLists */
 }
 
-.part:hover{
-  background-color: #f9a755;
-}
-
-.img{
-  width:90%;
-  height: 90%;
-  padding: 0px;
-  margin-top: 3px;
-}
-
-.avatar{
-  position: fixed;
+.avatar {
+  position: sticky;
   top: 20%;
   width: 450px;
   height: 500px;
-  margin-left: 50px;
   border-radius: 10%;
   border: 10px solid rgba(0, 0, 0, 0.2);
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
-.avatar_img{
+.avatar_img {
   width: 80%;
   height: auto;
-  margin-top: 30px;
-  margin-left: 55px;
-}
-.randomize {
-  width: 40%;
-  height: 8%;
-  border-radius: 5px;
-  font-size: larger;
-  margin-top: 435px;
-  margin-left: 140px;
 }
 
-.allPartLists{
-  margin-left: 750px;
-
-}
-
-.app-container {
-  justify-content: center; 
+.allPartLists {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
-  margin-left: 10%;
-  margin-right: 10%;
+ 
 }
 
-.list {
-  margin-bottom: 50px;
-  
+.list-title {
+  display: flex;
+  justify-content: center;
+  text-transform: capitalize;
 }
+
+
 
 .partList {
-  margin-top: -10px;
+  display: flex;
   border-radius: 1em;
   border: 5px solid rgb(241, 155, 27);
   background-color: #ebd3b1bd;
+  padding: 10px;
+  max-width: 600px;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
-.list-title{
-  text-align: center;
-  font-size: 170%;
-  font-family: 'Roboto', sans-serif;
-  text-transform: capitalize;
+.part {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 0.5em;
+  border: 1px  solid rgba(20, 14, 5, 0.838);
+}
 
+.img {
+  width: 90%;
+  height: 90%;
+}
+
+/* Responsive adjustments */
+@media (max-width: 1024px) {
+  .app-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .avatar {
+    position: relative;
+  }
+  .allPartLists {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .app-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .avatar-container {
+    width: 100%;
+    order: -1;
+  }
+  .allPartLists {
+    flex-direction: column;
+    align-items: center;
+  }
+  .partList {
+    width: 90%;
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  .app-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .avatar-container {
+    width: 100%;
+    order: -1;
+  }
+  .partList {
+    width: 100%;
+  }
 }
